# server/src/controllers/category.js
@@ -6,42 +6,52 @@
 const Category = require('../models/category')
 module.exports = {
     list: async (req, res) => {
+        /* #swagger.tags=['Categories']
+         */
 
-        const data = await res.getModelList(Category)
+        const data = await res.getModelList(Category);
 
-        res.status(200).send(data)
+        res.status(200).send(data);
     },
     create: async (req, res) => {
+        /* #swagger.tags=['Categories']
+         */
 
-        const data = await Category.create(req.body)
+        const data = await Category.create(req.body);
         res.status(201).send({
             error: false,
-            data
-        })
+            data,
+        });
     },
     read: async (req, res) => {
+        /* #swagger.tags=['Categories']
+         */
 
-        const data = await Category.findOne({ _id: req.params.id })
+        const data = await Category.findOne({ _id: req.params.id });
         res.status(200).send({
             error: false,
-            data
-        })
+            data,
+        });
     },
     update: async (req, res) => {
+        /* #swagger.tags=['Categories']
+         */
 
-        const data = await Category.updateOne({ _id: req.params.id }, req.body)
+        const data = await Category.updateOne({ _id: req.params.id }, req.body);
         res.status(202).send({
             error: false,
             data,
-            new: await Category.findOne({ _id: req.params.id })
-        })
+            new: await Category.findOne({ _id: req.params.id }),
+        });
     },
     delete: async (req, res) => {
-  
-        const data = await Category.deleteOne({ _id: req.params.id })
+        /* #swagger.tags=['Categories']
+         */
+
+        const data = await Category.deleteOne({ _id: req.params.id });
         res.status(data.deletedCount ? 204 : 404).send({
             error: !data.deletedCount,
-            data
-        })
+            data,
+        });
     },
 }
