# server/src/routes/index.js
@@ -5,8 +5,9 @@ router.use("/users", require("./user"));
 
 // categories
 router.use("/api", require('./blogComLikCat'))
-// document:
-router.use("/documents", require("./document"));
+// categories
+router.use("/documents", require('./document'))
+
 
 
 
